<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_sign_in_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="${relativePackage}.${activityClass}">

    <com.rejulink.widgets.ZScrollView
        android:id="@+id/scroll_view_sign_in"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/login_scroll_padding_bottom">

            <ImageView
                android:id="@+id/image_view_sign_in_logo_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/login_logo_top"
                android:src="@mipmap/logo_top_sign_in" />

            <ImageView
                android:id="@+id/image_view_sign_in_logo_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view_sign_in_logo_top"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/login_logo_bottom_margin_top"
                android:src="@mipmap/logo_bottom_sign_in" />

            <View
                android:id="@+id/image_view_sign_in_line_1"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/image_view_sign_in_logo_bottom"
                android:layout_marginTop="@dimen/login_line1_top"
                android:background="@color/divide_color" />

            <com.rejulink.widgets.ClearEditText
                android:id="@+id/clear_edit_text_sign_in_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_height"
                android:layout_below="@id/image_view_sign_in_line_1"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/login_account_text_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="@dimen/login_padding_horizontal"
                android:paddingRight="@dimen/login_padding_horizontal"
                android:singleLine="true"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/edit_hint_text_color"
                android:textSize="@dimen/login_text_size" />

            <LinearLayout
                android:id="@+id/linear_layout_sign_in_line_2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/clear_edit_text_sign_in_account"
                android:background="@color/white"
                android:orientation="horizontal">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/login_padding_horizontal"
                    android:background="@color/divide_color" />
            </LinearLayout>

            <com.rejulink.widgets.ClearEditText
                android:id="@+id/clear_edit_text_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_height"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/linear_layout_sign_in_line_2"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:hint="@string/login_password_text_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="@dimen/login_padding_horizontal"
                android:paddingRight="@dimen/login_padding_horizontal"
                android:singleLine="true"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/edit_hint_text_color"
                android:textSize="@dimen/login_text_size" />

            <View
                android:id="@+id/image_view_sign_in_line_3"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/clear_edit_text_sign_in_password"
                android:background="@color/divide_color" />

            <Button
                android:id="@+id/button_sign_in_submit"
                android:layout_width="@dimen/login_button_width"
                android:layout_height="@dimen/login_button_height"
                android:layout_below="@id/image_view_sign_in_line_3"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/login_padding_horizontal"
                android:layout_marginRight="@dimen/login_padding_horizontal"
                android:layout_marginTop="@dimen/login_button_margin_top"
                android:background="@drawable/button_sign_in_bg"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/login_text_login"
                android:textColor="@color/white"
                android:textSize="@dimen/login_button_text_size" />
        </RelativeLayout>
    </com.rejulink.widgets.ZScrollView>

    <LinearLayout
        android:id="@+id/linear_layout_sign_in_bottom_group"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_sign_in_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/login_text_register"
            android:textColor="@drawable/text_color_sign_in"
            android:textSize="@dimen/login_text_size" />

        <View
            android:id="@+id/image_view_sign_in_split"
            android:layout_width="1dp"
            android:layout_height="@dimen/login_divide_height"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_padding"
            android:background="@color/login_button_color" />

        <TextView
            android:id="@+id/text_view_sign_in_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_padding"
            android:gravity="center_vertical"
            android:text="@string/login_text_forget_password"
            android:textColor="@drawable/text_color_sign_in"
            android:textSize="@dimen/login_text_size" />
    </LinearLayout>

</RelativeLayout>